--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
-  <?!= include('Style'); ?>
+  <?!= include('style'); ?>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="container-layout bg-white shadow-xl rounded-2xl p-6 md:p-10 my-8">
